tests/parsing/smtlib/poly/errors/132_datatype_dec_unopened_cstr_list_1.expected
File "tests/parsing/smtlib/poly/errors/132_datatype_dec_unopened_cstr_list_1.psmt2", line 2, character 31-32:
2 | (declare-datatype foo (par (a) _))
                                   ^
Error while parsing a datatype declaration, read the reserved word '_',
      but expected an opening parenthesis to start the list of constructors.
